[07ab297629b2f6515024299131574a3d354aa859]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -11516,6 +11516,13 @@ Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublic
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
       <td>Texto</td>
       <td>255</td>
@@ -11835,6 +11842,13 @@ Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublic
       <td>4</td>
       <td>Não</td>
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -12206,6 +12220,13 @@ VKeU<br />
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
       <td>Texto</td>
       <td>255</td>
@@ -12536,6 +12557,13 @@ VKeU<br />
       <td>4</td>
       <td>Não</td>
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -12885,6 +12913,13 @@ VKeU<br />
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
       <td>Texto</td>
       <td>255</td>
@@ -13087,6 +13122,13 @@ VKeU<br />
       <td>4</td>
       <td>Não</td>
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -13389,6 +13431,13 @@ VKeU<br />
       <td>4</td>
       <td>Não</td>
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -13763,6 +13812,13 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
       <td>Texto</td>
       <td>255</td>
@@ -14090,6 +14146,13 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>4</td>
       <td>Não</td>
       <td>Código de segurança impresso no verso do cartão - Ver Anexo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
+      <td>Texto</td>
+      <td>10</td>
+      <td>Sim</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
