--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -6774,20 +6774,28 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
     <tr>
       <th>Variável</th>
       <th>Descrição</th>
+      <th>Supermid</th>
+      <th>Hierarquia</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td><strong>ProviderOrgId</strong></td>
       <td>Para obter este valor, entre em contato com a Cielo</td>
+      <td>*</td>
+      <td>*</td>
     </tr>
     <tr>
       <td><strong>ProviderMerchantId</strong></td>
-      <td>Para obter este valor, entre em contato com a Cielo</td>
+      <td>Identificador da loja no AF</td>
+      <td>Use o valor <code class="highlighter-rouge">cielo_webservice</code> padrão</td>
+      <td>Usar o fornecido pela CyberSource</td>
     </tr>
     <tr>
       <td><strong>ProviderSessionId</strong></td>
       <td>Prencha este campo com o mesmo valor do campo MerchantOrderId que será enviado na requisição da análise de fraude</td>
+      <td>N/A</td>
+      <td>N/A</td>
     </tr>
   </tbody>
 </table>
