[0cf190a1fba3d5c23850076b83226bc53d99b9b7]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -6773,11 +6773,37 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
 
 <h4 id="variáveis">Variáveis</h4>
 
-<p>| Variável               | Descrição                                                                                       | Supermid                              | Hierarquia                                |
-|————————|————————————————————————————————-|—————————————|——————————————-|
-| <strong>ProviderOrgId</strong>      | Identificador de requisições no AF                                                              | Use o valor padrão <code class="highlighter-rouge">k8vif92e</code>         | Dado exclusivo fornecido pela CyberSource |
-| <strong>ProviderMerchantId</strong> | Identificador da loja no AF                                                                     | Use o valor padrão <code class="highlighter-rouge">cielo_webservice</code> | Dado exclusivo fornecido pela CyberSource |
-| <strong>ProviderSessionId</strong>  | Usar o mesmo valor do campo MerchantOrderId que será enviado na requisição da análise de fraude | Definido pela loja                    | Definido pela loja                        |</p>
+<table>
+  <thead>
+    <tr>
+      <th>Variável</th>
+      <th>Descrição</th>
+      <th>Supermid</th>
+      <th>Hierarquia</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>ProviderOrgId</strong></td>
+      <td>Identificador de requisições no AF</td>
+      <td>Use o valor padrão <code class="highlighter-rouge">k8vif92e</code></td>
+      <td>Dado exclusivo fornecido pela CyberSource</td>
+    </tr>
+    <tr>
+      <td><strong>ProviderMerchantId</strong></td>
+      <td>Identificador da loja no AF</td>
+      <td>Use o valor padrão <code class="highlighter-rouge">cielo_webservice</code></td>
+      <td>Dado exclusivo fornecido pela CyberSource</td>
+    </tr>
+    <tr>
+      <td><strong>ProviderSessionId</strong></td>
+      <td>Usar o mesmo valor do campo MerchantOrderId que será enviado na requisição da análise de fraude</td>
+      <td>Definido pela loja</td>
+      <td>Definido pela loja</td>
+    </tr>
+  </tbody>
+</table>
+
 <blockquote>
   <p>PNG</p>
 </blockquote>
