[85fe4f54d65bc64612a86633669773c929266372]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5961,7 +5961,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Score</code></td>
-      <td>Score total calculado para o pedido.</td>
+      <td>Score total calculado para o pedido. Vai de 0 - 100 -  Quanto mais elevado, maior o risco.</td>
       <td>Número</td>
       <td>—</td>
       <td>Número</td>
