--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/tutorial/manual-boleto">Manual Boletos</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/tutorial/postman">Postman Cielo</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
