[3a524191a9340f34f822e08474a8f201d72ba54f]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-faq.md' via CloudCannon

--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -111,6 +111,10 @@
 
 <p>Sim, o Checkout funciona com pagamentos internacionais e cartões emitidos fora do Brasil, entretando o fornecimento de CPF e CEP são obrigatórios.</p>
 
+<h2 id="quais-meios-de-pagamento-o-checkout-cielo-suporta">Quais meios de pagamento o Checkout Cielo suporta?</h2>
+
+<p>Veja o manual de integração para a <a href="https://developercielo.github.io/manual/checkout-cielo#meios-de-pagamento-do-checkout-cielo">lista completa de meios de pagamento</a></p>
+
 <hr />
 
 <h1 id="dúvidas-de-integração">Dúvidas de Integração</h1>
@@ -157,6 +161,16 @@ O Lojista Checkout pode criar a propria tela de finalização e incluir a URL no
 <h2 id="como-integrar-o-visa-checkout-no-checkout-cielo">Como integrar o Visa Checkout no Checkout Cielo?</h2>
 
 <p>O Checkout Cielo já possui integração com o Visa Checkout. Para ativa-lo entre em contato com o Suporte Cielo e solicite a ativação.</p>
+
+<h2 id="quais-certificados-devo-usar-em-meu-servidor">Quais certificados devo usar em meu Servidor?</h2>
+
+<p>Os Certificados para uso do Checkout Cielo estão disponiveis no <a href="https://developercielo.github.io/manual/checkout-cielo#certificado-extended-validation">manual de integração</a></p>
+
+<h2 id="por-que-alguns-pedidos-são-marcados-como-nÃo-finalizados">Por que alguns pedidos são marcados como NÃO FINALIZADOS?</h2>
+
+<p>Pedidos “Não finalizados” são pedidos abandonados pelos compradores durante o processo de autorização/Autenticação.
+Alguns meios de pagamento, como Cartões de crédito Autenticados, Cartão de Débito e Boletos Registrados, exigem que o consumidor seja direcionado ao ambiente Bancario para verificação de identidade.
+Se o comprador abandonar a tela do banco, falhando no processo de autenticação, a transação é marcada como “não finalizada”</p>
 
 <hr />
 
@@ -293,7 +307,7 @@ O Lojista Checkout pode criar a propria tela de finalização e incluir a URL no
 
 <h2 id="como-é-ativado-o-modo-de-teste-checkout-cielo">Como é ativado o modo de teste Checkout Cielo?</h2>
 
-<p>No Backoffice Cielo Checkout, aba Configurações Pagamentos Modo de Teste é possível habilitar ou desabilitado o Modo de teste. Quando esse modo estiver ativo, uma grande faixa vermelha será exibida na parte superior de todas as telas do Checkout Cielo (Backoffice Checkout e Tela de pagamento).</p>
+<p>No Backoffice Cielo Checkout, aba Configurações &gt; Pagamentos » Modo de Teste é possível habilitar ou desabilitado o Modo de teste. Quando esse modo estiver ativo, uma grande faixa vermelha será exibida na parte superior de todas as telas do Checkout Cielo (Backoffice Checkout e Tela de pagamento).</p>
 
 <p>No Modo de teste o lojista ou desenvolvedor pode realizar testes de transações e de integração.</p>
 
