[840b6e90db528fdd6fec22b29cd21821c89fb18d]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-faq.md' via CloudCannon

--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -115,6 +115,10 @@
 
 <p>Veja o manual de integração para a <a href="https://developercielo.github.io/manual/checkout-cielo#meios-de-pagamento-do-checkout-cielo">lista completa de meios de pagamento</a></p>
 
+<h2 id="o-checkout-cielo-suporta-integrações-mobile">O Checkout Cielo suporta integrações mobile?</h2>
+
+<p>O Checkout Cielo suporta pagamentos mobile, mas não suporte integrações usando Javascript.</p>
+
 <hr />
 
 <h1 id="dúvidas-de-integração">Dúvidas de Integração</h1>
