[13de2dfb951b14f17ee3dd280b6ed2ccb7f30f38]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5314,7 +5314,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td><code class="highlighter-rouge">Customer.DeliveryAddress.Street</code></td>
       <td>Texto</td>
       <td>255</td>
-      <td>Não</td>
+      <td>sim</td>
       <td>Endereço do Comprador.</td>
     </tr>
     <tr>
@@ -5503,7 +5503,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td><code class="highlighter-rouge">FraudAnalysis.Browser.Email</code></td>
       <td>Texto</td>
       <td>100</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>E-mail registrado no browser do comprador.</td>
     </tr>
     <tr>
